# ICS432_Filter_App

./: .gitignore  README.md  pom.xml
external_filters/: Dockerfile  README.md
external_filters/c_filters/: CMakeLists.txt
external_filters/c_filters/src/: jpegedge.c  jpegfunk1.c  jpegfunk2.c
src/main/java/ics432/imgapp/: BoundedBuffer.java  DPMedianFilter.java  FileListWithViewPort.java  ICS432ImgApp.java  Job.java  JobThreads.java  JobWindow.java  MainWindow.java  MedianFilter.java  RGB.java  Statistics.java  StatisticsWindow.java  StopSignal.java  Util.java  WorkUnit.java  WorkUnitExternal.java
